@@ -5,12 +5,16 @@ Django MPTT CHANGELOG
 Thu 3rd Jan, 2008
 -----------------
 
+* Implemented the ``position`` argument for ``make_child_node`` and
+  ``move_node`` in ``TreeManager``. The node movement API can now be
+  used to move any node to an arbitrary point in any tree.
+
 * Implemented the ``position`` argument for
   ``TreeManager.move_to_new_tree``.
 
 * Implemented a ``position`` argument for
   ``TreeManager.move_within_tree``. The node being moved can now be made
-  a sibling, first child or last child  of the target node.
+  a sibling, first child or last child of the target node.
 
 * Added a ``move_node`` method to ``TreeManager``, to take care of
   automatically calling the appropriate node movement manager method.
